--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "pde-generator"]
 	path = pde-generator
 	url = git@github.com:badulion/pde-generator.git
+[submodule "models/PDE_NET2"]
+	path = models/PDE_NET2
+	url = git@github.com:ZichaoLong/PDE-Net.git
+	branch = PDE-Net-2.0
